<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/day_cell_bg"
    android:padding="5dp" >

    <LinearLayout
        android:id="@+id/oneday_topGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/onday_dayTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="16"
            android:textSize="16sp" />

        <View
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/onday_moonTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/lineframe"
            android:text="음 00.16"
            android:textSize="10sp"
            android:visibility="gone" />
        
    </LinearLayout>

    <TextView
        android:id="@+id/onday_msgTv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/oneday_topGroup"
        android:background="@drawable/lineframe"
        android:text="@string/app_name" />

    <LinearLayout
        android:id="@+id/onday_eventDots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:contentDescription="@string/event_icon"
            android:src="@drawable/dot" />

    </LinearLayout>

    <ImageView
        android:id="@+id/onday_weatherIv"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/weather_icon"
        android:src="@drawable/cloudy" />

</RelativeLayout>